[project]
name = "holmes-taskiq"
version = "0.1.0"
description = "A sample implementation of Taskiq"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beanie>=2.1.0",
    "openai>=2.32.0",
    "python-dotenv>=1.2.2",
    "redis>=7.4.0",
    "taskiq[opentelemetry]>=0.12.2",
    "taskiq-nats>=0.6.0",
    "taskiq-redis>=1.2.2",
]
